src/golden/cards/templates/nested/errors/test.golden/noduplicate.fl
	card NoDuplicate
		state 
			MyX x
		
		template top
			hold <- x => inner
		
		template inner
		
		template inner
